--- a/login.html
+++ b/login.html
@@ -212,7 +212,7 @@ body, html {
             <img id="profile-img" class="profile-img-card" 
             		src="images/truck_driver2.jpg" />
             <p id="profile-name" class="profile-name-card"></p>
-            <form class="form-signin" method="post" action="indexr.html">
+            <form class="form-signin" method="get" action="indexr.html">
             <div class="form-group" id="error-user">
                 <div class="input-group" id="error-user">
                 <span id="reauth-email" class="input-group-addon"> 
