--- a/login.html
+++ b/login.html
@@ -202,7 +202,7 @@ body, html {
 
      <td width="80%" align="left">
              <div class="col-lg-12">
-                    <h2><font color="#13322B"> Sistema de Logistica y Monitoreo de Unidades de Transporte</font> </h2>
+                    <h2><font color="#13322B"> Sistema de Logistica y Monitoreo ROADSA</font> </h2>
         </div>
      </td>    
   </tr>
