--- a/indexr.html
+++ b/indexr.html
@@ -311,7 +311,7 @@
                                     <div class="feed-element">
                                         <div>
 
-										<img alt="image"  src="images/mapa-demo.png" width="450" height="450" />
+										<img alt="image"  src="images/mapa-demo.PNG" width="450" height="450" />
 
                                         </div>
                                     </div>
